--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="categorias_animales">
-        <item>Mamíferos</item>
-        <item>Aves</item>
-        <item>Reptiles</item>
-        <item>Anfibios</item>
-        <item>Peces</item>
+        <item>Mamífero</item>
+        <item>Ave</item>
+        <item>Reptil</item>
+        <item>Anfibio</item>
+        <item>Pez</item>
     </string-array>
 </resources> 
